--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 23.05.2022 08:50:49</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 23.05.2022 09:14:05</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -133,7 +133,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny cerstvy jihocesky pstruh s pecenymi cherry rajcaty a petrzelkovym pestem, cockovy salat s paprikami, gaj coj, zeleninou a bylinkami 149</li><li>Peceny filet z cerstveho okounika a candata s pecenymi cherry rajcaty a petrzelkovym pestem, cockovy salat s paprikami, gaj coj, zeleninou a bylinkami 175</li><li>Burrito s kurecimi gyros nudlickami {volny chov}, pekingskym zelim a rajcaty, pecene brambory, tzatziki, salatek {L} 149</li><li>Spagety s nudlickami divocaka a divoke kachny {prsa}, gaj coj, jalapenos paprickami a zralou goudou {L} 175</li><li>Indicke zeleninove birjany z basmati ryze s beluga cockou, pecenymi baby paprikami, ovcim balkanskym syrem a sazenym vejcem, salatek 149 </li></ol>
+<ol><li>Peceny filet z atlanticke makrely s pecenymi sladkymi baby paprikami a petrzelkovou tahini, zeleninovy kuskus, salatek {L} 149</li><li>Peceny filet z cerstve norske tresky s pecenymi sladkymi baby paprikami a petrzelkovou tahini, zeleninovy kuskus, salatek {L} 175</li><li>Thajske restovane veprove se zelenymi fazolkami, zazvorem, limetkou a cerstvym chilli, jasminova ryze, salatek 149</li><li>Grilovana kruti jatra s jablecno-zazvorovym catny, gratinovane brambory, salatek 169</li><li>Marocka tagina s pecenymi bataty, cizrnou, rajcaty a susenymi merunkami, zeleninovy kuskus, salatek {L} 149</li></ol>
 </td>
 </tr>
 </table>
